--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <h1 class="title">TicTacToe</h1>
+    <div class="gameBoard">
+        <div class="boardGame">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        </div>
+         
+        <button id="restart">Play Again</button>
+
+    </div>
+
 </body>
 </html>
