--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe!</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <h1 class="title">TicTacToe</h1>
     <div class="gameBoard">
         <div class="boardGame">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
+        <div class="square" id="squareOne"></div>
+        <div class="square" id="squareTwo"></div>
+        <div class="square" id="squareThree"></div>
+        <div class="square" id="squareFour"></div>
+        <div class="square" id="squareFive"></div>
+        <div class="square" id="squareSix"></div>
+        <div class="square" id="squareSeven"></div>
+        <div class="square" id="squareEight"></div>
+        <div class="square" id="squareNine"></div>
         </div>
          
         <button id="restart">Play Again</button>
