added a website logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
+    <div class="header">
+    <img src="pictures/logo.png" style="width: 80px; height: 80px;">
     <h1 class="title">Tic-Tac-Toe</h1>
+    </div>
     <div class="main-container">
         <div class="playerInput">
             <label for="playerName">Enter your name :</label>
@@ -37,7 +40,8 @@
         <button id="restart">Play Again</button>
 
     </div>
-
+    <img src="pictures/oMark-removebg-preview.png">
+    <img src="pictures/xMark-removebg-preview.png">
 </body>
 
 </html>
